--- a/Staging-Info.plist
+++ b/Staging-Info.plist
@@ -21,5 +21,10 @@
 			</array>
 		</dict>
 	</dict>
+	<key>api</key>
+	<dict>
+		<key>host</key>
+		<string>api.topvalue.asia/rest/V1</string>
+	</dict>
 </dict>
 </plist>
