--- a/Staging-Info.plist
+++ b/Staging-Info.plist
@@ -35,7 +35,7 @@
 	<key>api</key>
 	<dict>
 		<key>host</key>
-		<string>api.topvalue.asia/rest/V1</string>
+		<string>https://api.topvalue.asia/rest/V1</string>
 	</dict>
 </dict>
 </plist>
