--- a/TopValue/Production/Info.plist
+++ b/TopValue/Production/Info.plist
@@ -2,6 +2,17 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>com.googleusercontent.apps.268646396554-73mr5rsisu5osq0aiemrr776iokaerll</string>
+			</array>
+		</dict>
+	</array>
+	<key>GIDClientID</key>
+	<string>268646396554-73mr5rsisu5osq0aiemrr776iokaerll.apps.googleusercontent.com</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
